--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start-json-server": "json-server --watch ./src/fake-api/markers.json --port 3001",
-    "dev": "concurrently \"yarn vite\" \"yarn start-json-server\" ",
+    "start-server": "tsx server/server.ts",
+    "dev": "concurrently \"yarn vite\" \"yarn start-server\" ",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -18,6 +18,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
     "json-server": "^1.0.0-alpha.23",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
@@ -26,7 +28,9 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/google.maps": "^3.55.7",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -36,7 +40,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.10.5",
+    "typescript": "^5.4.5",
     "vite": "^5.2.0"
   }
 }
