--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
-    "composite": true,
+    "target": "ES2020",
+    "lib": ["ES2020"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "outDir": "./dist",
+    "rootDir": "./server",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true
+    "composite": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["server/**/*"]
 }
+
